# SDL2Template

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  Conan.cmake
src/: App.cpp  App.hpp  CMakeLists.txt  ImGUIHelper.cpp  ImGUIHelper.hpp  ImageLoader.cpp  ImageLoader.hpp  OpenGLManager.cpp  OpenGLManager.hpp  Shader.cpp  Shader.hpp  frac.glsl  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h  main.cpp  stb_image.hpp  vert.glsl
src/detail/: Log.cpp  SDL2Core.hpp
